// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h3
    className="elengw"
  >
    <span
      className="camDcq"
    >
      ✓ 
    </span>
    Payment complete
  </h3>
  <h3
    className="elengw"
  >
    <span
      className="camDcq"
    >
      ✓ 
    </span>
    Refill sent
  </h3>
  <h3
    className="elengw"
  >
    <span
      className="dIUkup"
    >
      X 
    </span>
    Delivery failed
  </h3>
  <p>
    For some reason we failed do deliver your refill. This can happen if you have typed the number incorrectly, if the number is not for a prepaid phone or if the operator you selected was not the right one.
  </p>
  <p>
    Please use the button below to contact our support so that we can send you a refund.
  </p>
  <a
    className="eFndht"
    href="mailto:support@bitrefill.com?subject=Failed%20Order%20(ID%20--ORDER_ID--)&body=Hello%2C%0AMy%20order%20(ID%20--ORDER_ID--)%20failed%20to%20process.%20I'd%20like%20a%20refund%20to%20be%20sent%20to%20%3CReplace%20This%20With%20Your%20Refund%20Address%3E.%0A%0AThanks!"
  >
    Contact Support
  </a>
</div>
`;

exports[`supports auto-refunded orders 1`] = `
<div>
  <h3
    className="elengw"
  >
    <span
      className="camDcq"
    >
      ✓ 
    </span>
    Payment complete
  </h3>
  <h3
    className="elengw"
  >
    <span
      className="camDcq"
    >
      ✓ 
    </span>
    Refill sent
  </h3>
  <h3
    className="elengw"
  >
    <span
      className="dIUkup"
    >
      X 
    </span>
    Delivery failed
  </h3>
  <p>
    For some reason we failed do deliver your refill. This can happen if you have typed the number incorrectly, if the number is not for a prepaid phone or if the operator you selected was not the right one.
  </p>
  <p>
    We have sent you an automatic refund. Please make sure your details are correct and try again!
  </p>
  <button
    className="eFndht"
    onClick={[Function]}
    type="button"
  >
    Send another refill
  </button>
</div>
`;

exports[`supports refund address 1`] = `
<div>
  <h3
    className="elengw"
  >
    <span
      className="camDcq"
    >
      ✓ 
    </span>
    Payment complete
  </h3>
  <h3
    className="elengw"
  >
    <span
      className="camDcq"
    >
      ✓ 
    </span>
    Refill sent
  </h3>
  <h3
    className="elengw"
  >
    <span
      className="dIUkup"
    >
      X 
    </span>
    Delivery failed
  </h3>
  <p>
    For some reason we failed do deliver your refill. This can happen if you have typed the number incorrectly, if the number is not for a prepaid phone or if the operator you selected was not the right one.
  </p>
  <p>
    We have sent you an automatic refund. You should receive it within a few minutes.
  </p>
  <p>
    <a
      href="https://live.blockcypher.com/btc/address/--REFUND_ADDR--/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Click here to see how it's going
    </a>
     or 
    <a
      href="mailto:support@bitrefill.com?subject=Failed%20Order%20(ID%20--ORDER_ID--)"
    >
      contact support@birefill.com
    </a>
    .
  </p>
</div>
`;
